--- a/index.html
+++ b/index.html
@@ -1,15 +1,66 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
-  <div class="header">
-      1
-  </div>
-  <div class="content">
-  </div>
+  <header class="header" ;>
+
+    <div class="header-1">
+      <img src="./assets/logo.png" alt="">
+    </div>
+    <div class="header-2">
+      <div class="item">
+        <div class="icon"><img src="./assets/home-alt.svg" alt=""> </div>
+        <div class="htitle-color"> Home </div>
+      </div>
+      <div class="item">
+        <div class="icon"><img src="./assets/paper-plane.svg" alt=""> </div>
+        <div class="htitle"> Post </div>
+      </div>
+      <div class="item">
+        <div class="icon"><img src="./assets/heart.svg" alt=""> </div>
+        <div class="htitle"> Activity </div>
+      </div>
+      <div class="item">
+        <div class="icon"><img src="./assets/bookmark.svg" alt=""> </div>
+        <div class="htitle"> Bookmark </div>
+      </div>
+    </div>
+    </div>
+    <div class="header-3">
+      <div class = search-bar>
+        <div class = "icon"><img src="./assets/search.svg" alt=""></div>
+        <input type="text" class="input-field" placeholder="Search will seed post">
+        </input>
+      </div> 
+    </div>
+
+    <div class="header-4">
+      <div width="8" height="8" viewBox="0 0 8 8" fill="none">
+        <img src="./assets/bell.svg" alt ="">
+        <circle cx="4" cy="4" r="4" fill="#E72511"/>
+      </div>
+      <div class="user-specs">
+        <div class="avatar">
+          <img src="./assets/Divider.svg" alt="">
+        </div>
+        <div class="username">
+          Bessie Cooper
+        </div>
+        <div class="caret-down">
+          <img src="./assets/caret-down.svg" alt="">
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="content">
+  </main>
 </body>
+
 </html>
