--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <header class="header" ;>
+  <header class="header">
 
     <div class="header-1">
       <img src="./assets/logo.png" alt="">
@@ -47,9 +47,9 @@
     </div>
 
     <div class="header-4">
-      <div class = "parent" width="8" height="8" viewBox="0 0 8 8" fill="none">
-        <img class = "bell" src="./assets/bell.svg" alt="">
-        <img class="circle" src="./assets/Ellipse.svg" alt ="">
+      <div class="parent" width="8" height="8" viewBox="0 0 8 8" fill="none">
+        <img class="bell" src="./assets/bell.svg" alt="">
+        <img class="circle" src="./assets/Ellipse.svg" alt="">
       </div>
       <div class="user-specs">
         <div id="avatar">
@@ -65,8 +65,67 @@
     </div>
 
   </header>
-
-  <main class="content">
+  <main class="pagebody">
+    <div class="sidebar">
+      <div class="sidebar-block">
+        <div class="block-heading">
+          <div class="icon-action">
+            <img src="./assets/siren-on.svg" alt="">
+          </div>
+          <div class="heading">
+            News
+          </div>
+          <div class="button">
+            <img src="./assets/Button.svg" alt="">
+          </div>
+        </div>
+        <div class="block-heading-chosen">
+          <div class="icon-action">
+            <img src="./assets/chalkboard.svg" alt="">
+          </div>
+          <div class="heading-chosen">
+            Technology
+          </div>
+          <div class="button">
+            <img src="./assets/Button.svg" alt="">
+          </div>
+        </div>
+        <div class="block-heading">
+          <div class="icon-action">
+            <img src="./assets/play.svg" alt="">
+          </div>
+          <div class="heading">
+            Music
+          </div>
+        </div>
+        <div class="block-heading">
+          <div class="icon-action">
+            <img src="./assets/comment-alt.svg" alt="">
+          </div>
+          <div class="heading">
+            Feedback
+          </div>
+          <div class="button">
+            <img src="./assets/Button99.svg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="sidebar-block">
+        <div class="block-heading">
+          <div class="icon-action">
+            <img src="./assets/clipboard-check.svg" alt="">
+          </div>
+          <div class="heading">
+            Feedback
+          </div>
+          <div class="button">
+            <img src="./assets/Button.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+    </div>
   </main>
 </body>
 
