editComment-bug-unusable-onclick

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
     <div class="content">
       <div class="content-body">
         <div class="content-heading">
+          <!-- <div class="post-comment-action">
+            <div class="post-comment-action-block">
+              <img src="./assets/pen.png" alt="">
+            </div>
+            <div onclick="" class="post-comment-action-block">
+              <img src="./assets/trash.png" alt="">
+            </div>
+          </div> -->
           <img src="./assets/laptop.svg" alt="">
           <div>
             Technology
@@ -67,6 +75,4 @@
   </main>
   <script src="./script.js"></script>
 </body>
-
-
 </html>
